--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,21 +142,36 @@ label {
     background: white;
 }
 
-@media screen and (max-width: 412px){
+@media screen and (max-width: 1222px){
     body {
         display: inline-block;
-        height: 1000px;
+        width: 100vw;
+        height: 100vh;       
     }
 
     .container1{
-        margin-top: -50px;
-        margin-bottom: 10px;
+        width: 370px;
+        display: flex;
+        margin-top: -30px;
+        margin-bottom: 40px;
+        padding-bottom: 10px;
+        box-shadow: 0px 0px 10px rgb(196, 196, 196);
+    }
+
+    .container1 h2 {
+        padding-top: 20px;
+    }
+
+    .container1 .bttn {
+        margin-top: -20px;
     }
 
     .container2{
-        width: 100vw;
+        width: 370px;
         height: 400px;
         padding-bottom: 200px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgb(196, 196, 196);
     }
 
     .container2 form {
@@ -164,6 +179,10 @@ label {
     }
 
     .box {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        width: 370px;
+        margin: auto;
+        box-shadow: none;
     }
 }
